// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`parseSelectOptions creates an option list 1`] = `
[
  <option
    data-testid="test-val"
    label="Value"
    value="val"
  >
    Value
  </option>,
  <option
    data-testid="test-val2"
    label="Value 2"
    value="val2"
  >
    Value 2
  </option>,
]
`;

exports[`parseSelectOptions creates an option list 2`] = `
[
  <option
    data-testid="test-val"
    label="val"
    value="val"
  >
    val
  </option>,
  <option
    data-testid="test-val2"
    label="val2"
    value="val2"
  >
    val2
  </option>,
]
`;

exports[`parseSelectOptions creates an option list as object 1`] = `
[
  {
    "key": "test-val",
    "label": "Value",
    "value": "val",
  },
  {
    "key": "test-val2",
    "label": "Value 2",
    "value": "val2",
  },
]
`;

exports[`parseSelectOptions creates an option list as object without generated labels 1`] = `
[
  {
    "label": "val",
    "value": "val",
  },
  {
    "label": "val2",
    "value": "val2",
  },
]
`;
